# blochviz

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test.yml
blochviz/: __init__.py  animation.py  gates.py  sphere.py  state.py
examples/: grover.py  multi_qubit.py  phase_gates.py  single_qubit.py  state_sweep.py
tests/: test_gates.py  test_state.py
