[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "blochviz"
version = "0.1.0"
description = "Minimal Bloch sphere visualizer for single and multi-qubit states"
requires-python = ">=3.10"
dependencies = ["numpy", "matplotlib"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["."]
include = ["blochviz*"]
