[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "blochviz"
version = "0.1.0"
description = "Minimal Bloch sphere visualizer for single and multi-qubit states"
requires-python = ">=3.10"
dependencies = ["numpy", "matplotlib"]

[project.optional-dependencies]
dev = ["pytest", "mypy", "ruff"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "ANN"]
ignore = [
    "ANN401",  # Any
]

[tool.mypy]
python_version = "3.10"
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_return_any = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = ["matplotlib.*", "mpl_toolkits.*"]
ignore_missing_imports = true

[tool.setuptools.packages.find]
where = ["."]
include = ["blochviz*"]
